# ReDD

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TODO.md  constants.py  main_correction.py  main_datapop.py  main_schemagen.py  pyproject.toml  requirements.txt  set_up_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cfg/: datapop_cogito32b.yaml
configs/: datapop_cogito32b.yaml  deepseek_mfe_all.yaml  deepseek_queries_all.yaml  schemagen.yaml  siliconflow_qwen30B.yaml
configs/demo/: demo_datasets.yaml
configs/examples/: alpha_goal_gt_logreg_alpha.yaml  alpha_goal_gt_logreg_noalpha.yaml  bird_q4_baseline.yaml  bird_q4_doc_filter.yaml  bird_q4_doc_filter_predicate_proxy.yaml  bird_q4_predicate_proxy.yaml  deepseek_ablation_bike_baseline.yaml  deepseek_ablation_bike_doc_filter_metadata.yaml  deepseek_ablation_bike_doc_filter_plus_proxy.yaml  deepseek_ablation_bike_full_stack.yaml  deepseek_ablation_bike_full_stack_alpha.yaml  deepseek_ablation_bike_full_stack_extraction_cache.yaml  deepseek_ablation_bike_predicate_proxy.yaml  deepseek_ablation_bike_table_cache_plus_proxy.yaml  deepseek_ablation_bike_table_metadata_cache.yaml  deepseek_ablation_multi_bird_california_schools_baseline.yaml  deepseek_ablation_multi_bird_california_schools_doc_filter_metadata.yaml  deepseek_ablation_multi_bird_california_schools_full_stack_extraction_cache.yaml  deepseek_ablation_multi_bird_california_schools_predicate_proxy.yaml  deepseek_ablation_multi_bird_california_schools_table_metadata_cache.yaml  deepseek_ablation_multi_bird_debit_card_baseline.yaml  deepseek_ablation_multi_bird_debit_card_doc_filter_metadata.yaml  deepseek_ablation_multi_bird_debit_card_full_stack_extraction_cache.yaml  deepseek_ablation_multi_bird_debit_card_predicate_proxy.yaml  deepseek_ablation_multi_bird_debit_card_table_metadata_cache.yaml  deepseek_ablation_multi_bird_student_club_baseline.yaml  deepseek_ablation_multi_bird_student_club_doc_filter_metadata.yaml  deepseek_ablation_multi_bird_student_club_full_stack_extraction_cache.yaml  deepseek_ablation_multi_bird_student_club_predicate_proxy.yaml  deepseek_ablation_multi_bird_student_club_table_metadata_cache.yaml  deepseek_ablation_multi_spider_soccer_1_baseline.yaml  deepseek_ablation_multi_spider_soccer_1_doc_filter_metadata.yaml  (+46 more)
core/: __init__.py
core/correction/: __init__.py  (+7 more)
data_loader/: data_loader_basic.py  data_loader_spider.py
data_population/: datapop_basic.py  datapop_deepseek.py  datapop_gpt.py  datapop_local.py
dataset/: data_pop_prep.py  manifest.yaml  migration_report.json  schema_gen_prep.py
docs/: API_EXAMPLES.md  CONFIG_V2_REFERENCE.md  DATASET_CONTRACT.md  MODULE_CLASSIFICATION.md  OPEN_SOURCE_READINESS.md  RELEASE_NOTES_CONFIG_V2.md  RESEARCH_WORKFLOWS.md  redd_paper_verification.md
eval/: eval_basic.py  eval_datapop.py
h_classifier/: classifier_structure.py  hidden_states_loader.py  test_classifier.py  train_classifier.py
prompts/: datapop_table_json.txt  eval_datapop_cmp_str.txt  schema_tailor_1_0.txt  schemagen_4_0.txt  schemagen_4_1.txt  schemagen_5_1.txt
schema_gen/: schemagen_basic.py  schemagen_deepseek.py  schemagen_gpt.py
scripts/: deepseek_multi_ablation.py  evaluate_codex_semantic_cells.py  main_datapop.py  main_exp.py  main_preprocessing.py  main_schema_refinement.py  main_schemagen.py  migrate_dataset_contract.py  optimizer_ablation.py  query_curation.py  query_curation_apply_and_report.py  query_curation_experiment.py  redd_paper_analogous_schema_summarize.py  redd_paper_analogous_summarize.py  redd_paper_analogous_template.py  redd_paper_claim_audit.py  redd_paper_completion_audit.py  redd_paper_completion_gate.py  redd_paper_controlled_analogous_experiments.py  redd_paper_dataset_setup_summarize.py  redd_paper_experiment_suite.py  redd_paper_feasibility_certificate.py  redd_paper_llm_usage_summarize.py  redd_paper_verify_all.py  redd_provider_smoke.py  repair_canonical_gt_alignment.py  repair_dataset_attr_scope.py  run_deepseek_full_canonical_alpha.sh  run_deepseek_full_canonical_alpha_evaluation.sh  run_deepseek_full_canonical_alpha_repaired_evaluation.sh  script_ensemble_classifiers.py
tests/: README.md  test_api_contracts.py  test_config_normalization.py  test_factories_and_providers.py  test_package_smoke.py  test_runtime_boundaries.py
utils/: logging_utils.py  output_utils.py  prompt_utils.py  utils.py
(+864 files in other folders)
