[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redd"
version = "0.1.0"
description = "ReDD package for schema discovery and data extraction over unstructured documents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "ReDD Contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "tqdm",
  "pandas",
  "pyarrow",
  "PyYAML",
  "litellm",
  "pydantic>=2",
  "tenacity",
  "transformers>=4.57.0,<5",
  "accelerate>=0.26.0",
  "gliclass>=0.1.16",
]

[project.urls]
Homepage = "https://github.com/daren996/ReDD"
Repository = "https://github.com/daren996/ReDD"

[project.optional-dependencies]
structured = [
  "instructor[litellm]",
]
retrieval = [
  "faiss-cpu",
]
web = [
  "fastapi>=0.115.0",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.30.0",
]
dev = [
  "build>=1.2.2",
  "mypy>=1.11.2",
  "pytest>=8.0.0",
  "ruff>=0.6.9",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
redd = "redd.cli.main:main"
redd-preprocess = "redd.cli.preprocessing:main"
redd-refine = "redd.cli.schema_refinement:main"
redd-extract = "redd.cli.extract:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redd = ["resources/*.json", "resources/prompts/*.txt", "resources/web_demo/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = [
  "src/redd/__init__.py",
  "src/redd/api.py",
  "src/redd/config.py",
  "src/redd/runtime.py",
  "src/redd/core/data_population/factory.py",
  "src/redd/core/schema_gen/factory.py",
  "src/redd/core/utils/prompt_utils.py",
  "src/redd/llm/providers.py",
  "tests",
]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
